<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.keepsystems.conversordeunidades.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/temperatura"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:onClick="onClick"
            android:text="@string/temperatura" />



        <Button
            android:id="@+id/masa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:onClick="onClick"
            android:text="@string/masa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/longitud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/longitud" />

        <Button
            android:id="@+id/velocidad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/velocidad"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/volumen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/volumen" />

        <Button
            android:id="@+id/tiempo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/tiempo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/almacenamiento"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/almacenamiento" />

        <Button
            android:id="@+id/sonido"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/sonido" />
    </LinearLayout>
</LinearLayout>
